[package]
name = "vane-extra"
version = "0.9.2"
edition = "2024"
rust-version = { workspace = true }
license = "MIT"
description = "Standalone plugins for vane: L4 proxy, middleware, external plugin system"

[features]
ratelimit = []
console = []

[dependencies]
vane-primitives = { path = "../primitives" }
vane-engine = { path = "../engine" }
vane-transport = { path = "../transport" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-log = "0.1"
envflag = "0.1"
dashmap = "6"
once_cell = "1"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
bytes = "1"

[lints]
workspace = true
