[package]
name = "vane-primitives"
version = "0.9.2"
edition = "2024"
rust-version = { workspace = true }

[dependencies]
ahash = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
envflag = "0.1"
fancy-log = "0.1"
lazy_static = "1"
live = { version = "0.4", features = ["full"] }
once_cell = "1"
rcgen = "0.14"
regex = "1"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
thiserror = "2"
tokio = { version = "1", features = ["full", "signal"] }
rustls = { version = "0.23", default-features = false, features = [
	"logging",
	"std",
	"tls12",
	"ring",
] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"] }
utoipa = { version = "5", optional = true }
uuid = { version = "1", features = ["v4", "v7"] }
validator = { version = "0.20", features = ["derive"] }
x509-parser = "0.18"

[features]
console = ["dep:utoipa"]
domain-target = []

[lints]
workspace = true
