[package]
name = "vane-transport"
version = "0.9.2"
edition = "2024"
rust-version = { workspace = true }
description = "L4/L4+ transport layers, ingress listeners, and protocol parsing for Vane."
license = "MIT"

[features]
tcp = ["dep:fancy-regex"]
udp = ["dep:fancy-regex"]
tls = [
  "dep:rustls",
  "dep:tokio-rustls",
  "dep:tls-parser",
  "dep:x509-parser",
  "dep:rustls-pemfile",
  "vane-app/tls",
]
quic = ["dep:quinn", "dep:aes", "vane-app/quic"]
lazycert = []
console = []
domain-target = ["dep:hickory-resolver", "vane-engine/domain-target"]

# Crypto backends
aws-lc-rs = [
  "rustls?/aws-lc-rs",
  "tokio-rustls?/aws-lc-rs",
  "quinn?/aws-lc-rs",
  "vane-app/aws-lc-rs",
]
ring = ["rustls?/ring", "tokio-rustls?/ring", "quinn?/ring", "vane-app/ring"]

[dependencies]
vane-primitives = { path = "../primitives" }
vane-engine = { path = "../engine" }
vane-app = { path = "../app" }

tokio = { version = "1", features = ["full", "signal"] }
bytes = "1"
http = "1"
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fancy-log = "0.1"
envflag = "0.1"
dashmap = "6"
once_cell = "1"
sigterm = { version = "0.3", features = ["full"] }
guess = { version = "0.1", features = ["http", "tls", "dns", "quic"] }
httparse = "1"
quinn-proto = "0.11"
ahash = "0.8"
hex = "0.4"
rand = "0.9"
live = { version = "0.4", features = ["full"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
tokio-util = "0.7"

# Optional
fancy-regex = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = [
  "logging",
  "std",
  "tls12",
], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = [
  "logging",
  "tls12",
], optional = true }
rustls-pemfile = { version = "2", optional = true }
tls-parser = { version = "0.12", optional = true }
x509-parser = { version = "0.18", optional = true }
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
], optional = true }
aes = { version = "0.8", optional = true }
hickory-resolver = { version = "0.25", optional = true }
ring = "0.17"

[dev-dependencies]
tempfile = "3"
dirs = "6"

[lints]
workspace = true
