[package]
name = "vane-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vane-primitives.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
vane-test-utils.workspace = true
