[package]
name = "acme-provider"
version = "0.0.1"
categories = ["cryptography", "network-programming", "api-bindings"]
edition.workspace = true
keywords = ["acme", "dns01", "letsencrypt", "tls", "cloudflare"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "DnsProvider trait for ACME DNS-01 challenges, with optional provider implementations behind feature flags."

[lints]
workspace = true

[features]
default = []
# Cloudflare v4 REST API DNS provider.
cloudflare = [
	"dep:hickory-resolver",
	"dep:parking_lot",
	"dep:reqwest",
	"dep:serde",
	"dep:serde_json",
	"dep:tokio",
]

[dependencies]
async-trait = "0.1"
thiserror = "2"

# Cloudflare-only — gated by features.cloudflare; default builds get just trait + error.
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"], optional = true }
parking_lot = { version = "0.12", optional = true }
# rustls + native-certs + no-provider lets the host pick the rustls crypto backend.
# (Pre-0.13 reqwest exposed this combo as the single feature `rustls-tls-native-roots-no-provider`.)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "rustls-no-provider", "json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["sync", "time"], optional = true }

[dev-dependencies]
# Cloudflare tests need a rustls provider installed before reqwest builds its (lazy)
# TLS config — even when only talking to a wiremock server over plain HTTP.
rustls = { version = "0.23", default-features = false, features = ["std", "aws-lc-rs"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
