[package]
name = "cgi-response"
version = "0.0.1"
categories = ["web-programming::http-server", "network-programming"]
edition.workspace = true
keywords = ["cgi", "rfc3875", "http-body", "response", "stream"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Parse a CGI child's stdout into an http::Response with a streaming body."

[lints]
workspace = true

[dependencies]
bytes.workspace = true
http.workspace = true
http-body = "1"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "time"] }

[dev-dependencies]
http-body-util.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "time", "test-util"] }
