[package]
name = "clienthello"
version = "0.2.1"
categories = ["network-programming"]
edition.workspace = true
keywords = ["quic", "tls", "sni"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Extract the TLS SNI from a QUIC client's Initial datagrams without performing a full handshake."

[lints]
workspace = true

[dependencies]
# AEAD + HKDF for RFC 9001 §5.2 initial keys derivation. Pure-Rust
# RustCrypto v0.10-generation stack — no C deps, ergonomic for
# downstream publishers, and aligned with the workspace's `sha2 0.11`
# so cargo deduplicates the SHA-256 implementation.
#
# `aes-gcm` is pinned to the precise 0.11-rc release that lines up
# with `aes 0.9` / `ctr 0.10`; loosening this pin would let cargo
# pick a future rc whose API may shift before stabilisation. Bump
# the pin in lockstep when newer rc / stable releases land.
aes = "0.9"
aes-gcm = "=0.11.0-rc.3"
# AES-CTR for QUIC header protection (RFC 9001 §5.4).
ctr = "0.10"
hkdf = "0.13"
sha2 = "0.11"
# subtle: constant-time comparison primitives.
subtle = "2"
# thiserror: idiomatic error enum boilerplate.
thiserror = "2"
