[package]
name = "clienthello"
version = "0.2.1"
categories = ["network-programming"]
edition.workspace = true
keywords = ["quic", "tls", "sni"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
description = "Extract the TLS SNI from QUIC Initial datagrams without performing a handshake."

[lints]
workspace = true

[dependencies]
# RFC 9001 §5.2 initial-keys derivation. RustCrypto v0.10-gen pure-Rust stack;
# `sha2 0.11` matches the workspace pin so cargo dedups the SHA-256 impl.
aes = "0.9"
# Pinned to this rc — looser pin would let cargo pick a future rc whose API may shift. Bump in lockstep.
aes-gcm = "=0.11.0-rc.3"
# QUIC header protection (RFC 9001 §5.4).
ctr = "0.10"
hkdf = "0.13"
sha2 = "0.11"
# Constant-time comparison.
subtle = "2"
thiserror = "2"
